--- a/systemX/getStockData/config.toml
+++ b/systemX/getStockData/config.toml
@@ -7,9 +7,9 @@ JWT_EXPIRE_TIME=1440
 SHARD_NUMBER = 1
 SHARD_ADDRESS=["127.0.0.1:3306"]
 SHARD_TYPE = ["mysql"]
-SHARD_NAME = ["stockdata"]
-SHARD_USER = ["tpp"]
-SHARD_PASSWORD = ["Tpp@123456"]
+SHARD_NAME = ["stock"]
+SHARD_USER = ["root"]
+SHARD_PASSWORD = ["123"]
 DB_ARGS="charset=utf8&collation=utf8_general_ci&parseTime=true&loc=Asia%2FHo_Chi_Minh"
 DB_MAX_IDLE=2
 DB_MAX_OPEN=4
