--- a/systemX/Price_Generator/config.env
+++ b/systemX/Price_Generator/config.env
@@ -3,14 +3,14 @@ TEST='TEST'
 # DATABASE CONFIG
 HOST="127.0.0.1"
 PORT="3306"
-USER="tpp"
-PASSWORD="Tpp@123456"
-DATABASE="stockdata"
+USERDB="root"
+PASSWORD="123"
+DATABASE="stock"
 
 # STOCK CONFIG
 #startdate enddate
-START_DATE = "2010-01-01"
-END_DATE = "2020-01-01"
+START_DATE = "2015-01-01"
+END_DATE = "2021-05-25"
 
 # MODEL CONFIG
 ModelName="LSTM"
@@ -25,6 +25,6 @@ ModelActivation="linear"
 # TRAINING CONFIG
 BatchSize=365
 Epochs=5
-Lookup_Steps=1
+Lookup_Steps=3
 NSteps=20
 TestSize=0.1
