--- a/systemX/portal/config/config.toml
+++ b/systemX/portal/config/config.toml
@@ -13,4 +13,4 @@ DB_ARGS="charset=utf8&collation=utf8_general_ci&parseTime=true&loc=Asia%2FHo_Chi
 DB_MAX_IDLE=2
 DB_MAX_OPEN=4
 
-MODEL_NAME=["LSMT", "LSTM_2"]
+MODEL_NAME=["LSTM", "LSTM_2"]
